# DCR

./: .gitignore  CLAUDE.md  CONTRIBUTIONS.md  README.md  dcr_implementation_prompt.md  deformation_aware_contact_frame.md  passive_energy_injection_implementation_prompt.md  passive_modal_energy_injection_foundation.md  pyproject.toml
benchmark/: BENCHMARK_PROMPT.md  PATCH_MODE_BENCHMARK.md  RESULTS.md
benchmark/manifests/: B1_manifest.json  B2_manifest.json  B3_manifest.json  B4_manifest.json  B5_manifest.json  B6_manifest.json  B7_manifest.json  (+1 more)
benchmarks/: run_h_sweep.py
data/: beam.msh  block.msh  slab.msh
dcr/: __init__.py
docs/: distant_velocity_modes.md  stage1.md  stage7.md  stageE0.md  stageE1.md  stageE2.md  stageE3.md  stageE4.md  stageE5.md  stageE6.md
prompts/: dcr_implementation_prompt.md  deformation_aware_contact_frame.md  fix_distant_velocity_energy_bug.md  passive_contact_causal_modal_coupling.md  passive_modal_energy_injection_foundation.md
scenes/: test_box.py
scripts/: ab_shelf_clip_cap.py  analyze_patch_mode.py  compare_deformed_normals.py  generate_meshes.py  investigate_lateral_drift.py  plot_benchmarks.py  run_all_benchmarks.py  run_one.py  run_scenes.py  run_stage1.py  run_stage2.py  run_stage3.py  run_stage4.py  run_stage5.py  run_stage6.py  run_stage7.py  run_stageE0.py  run_stageE3.py  run_stageE4.py  run_stageE5.py  run_stageE6.py  run_tilt_demo.py  run_truck_steel_visual.py  run_viewer.py  sweep_beta.py  write_manifest.py  write_top_manifest.py
tests/: test_stage1.py  test_stage4.py  test_stage6.py  test_tilt_dcr.py
(+80 files in other folders)
